--- a/by.Reba/by.Reba.Application/Views/Shared/_DeleteEntityPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_DeleteEntityPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model DeleteEntityVM
 
 <div class="modal fade" id="@($"ent{Model.Id}")" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content bg-lightgrey">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">@($"Удалить {Model.EntityName}")</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -12,9 +12,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отменить</button>
-        <a asp-controller="Article" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">
-            Удалить
-        </a>
+        <a asp-controller="Article" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Удалить</a>
       </div>
     </div>
   </div>
