--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
@@ -12,7 +12,7 @@
         <partial name="_LayoutHeader"></partial>
         <main role="main" class="m-0 me-md-3">
             <div class="d-flex gap-1 gap-sm-2">
-                <partial name="AdminAside"></partial>
+                <partial name="_AdminAside"></partial>
                 <div class="flex-grow-1">
                     @RenderBody()
                 </div>
