--- a/by.Reba/by.Reba.Application/Views/Source/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Source/Edit.cshtml
@@ -1,6 +1,6 @@
-﻿@using by.Reba.Application.Models.Article
+﻿@using by.Reba.Application.Models.Source
 
-@model CreateOrEditVM
+@model CreateOrEditSourceVM
 
 @{
     ViewData["Title"] = "Редактировать источник";
