--- a/by.Reba/by.Reba.Application/wwwroot/css/site.css
+++ b/by.Reba/by.Reba.Application/wwwroot/css/site.css
@@ -25,8 +25,24 @@ html {
 }
 
 @media (min-width: 768px) {
-    html {
-        font-size: 16px;
+
+}
+
+@media (min-width: 992px) {
+    .card-title {
+        font-size: 12px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card-title {
+        font-size: 14px;
+    }
+}
+
+@media (min-width: 1600px) {
+    .card-title {
+        font-size: 18px;
     }
 }
 
@@ -89,6 +105,10 @@ a:hover {
     border: 1px solid #198754;
 }
 
+.card-title {
+    margin: 0;
+}
+
 .form-select {
     background-color: lightgray;
     border: 1px solid #198754;
@@ -105,7 +125,7 @@ a:hover {
 }
 
 .circle-avatar {
-    width: 100%;
+    width: 200px;
     height: 200px;
 }
 
