--- a/by.Reba/by.Reba.Application/Views/Source/_CreateOrEditSourcePartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Source/_CreateOrEditSourcePartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using by.Reba.Application.Models.Source
 @model CreateOrEditSourceVM
 
-<div class="d-flex flex-column gap-3">
+<div class="d-flex flex-column gap-3 col-12 offset-0 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
     <input asp-for="Id" value="@Model.Id" type="hidden"/>
     <div>
         <label asp-for="Name" class="form-label">Наименование</label>
