--- a/by.Reba/by.Reba.Application/Views/Article/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Edit.cshtml
@@ -4,6 +4,7 @@
 
 @{
     ViewData["Title"] = "Редактировать новость";
+    Layout = "_AdminLayout";
 }
 <form asp-controller="Article" asp-action="Edit" method="post">
     <partial name="_CreateOrEditPartial" model="@Model"></partial>
