--- a/by.Reba/by.Reba.Application/Views/Positivity/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Positivity/Edit.cshtml
@@ -3,9 +3,9 @@
 @model CreateOrEditPositivityVM
 
 @{
-    ViewData["Title"] = "Создать позитивность";
+    ViewData["Title"] = "Редактировать позитивность";
     Layout = "_AdminLayout";
 }
-<form asp-controller="PositivityRating" asp-action="Create" method="post">
+<form asp-controller="Positivity" asp-action="Edit" method="post">
     <partial name="_CreateOrEditPositivityPartial" model="@Model"></partial>
 </form>
