--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminAside.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminAside.cshtml
@@ -5,6 +5,6 @@
         <li class="px-1 px-sm-3"><a class="text-success" asp-controller="Article" asp-action="Grid">Новости</a></li>
         <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Account" asp-action="Grid">Пользователи</a></li>
         <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Source" asp-action="Grid">Источники</a></li>
-        <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="PositivityRating" asp-action="Grid">Позитивности</a></li>
+        <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Positivity" asp-action="Grid">Позитивности</a></li>
     </ul>
 </div>
